fix: :bug: update z-index for leaflet elements

--- a/src/index.css
+++ b/src/index.css
@@ -79,3 +79,14 @@
     @apply bg-background text-foreground;
   }
 }
+
+.leaflet-control {
+  z-index: 0 !important;
+}
+.leaflet-pane {
+  z-index: 0 !important;
+}
+.leaflet-top,
+.leaflet-bottom {
+  z-index: 0 !important;
+}
